--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>comida na FMUP</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="comida na FMUP" />
+    <meta property="og:url" content="https://henriquetguedes.github.io/comidaFMUP/" />
+    <meta property="og:image" content="https://henriquetguedes.github.io/comidaFMUP/img/og.jpg" />
+    <meta property="og:description" content="Menus do refeitório HSJ, cantina UP, YellowBar e restCIM - centralizados numa página." />
     <link rel="stylesheet" href="includes/css/uikit.min.css" />
     <script src="includes/js/jquery-3.4.1.min.js"></script>
     <script src="includes/js/uikit.min.js"></script>
