--- a/ns.html
+++ b/ns.html
@@ -41,6 +41,8 @@
             <br>
             Código com a colaboração de <a href="https://github.com/msramalho">Miguel Ramalho</a>.<br>
             <br>
+            Ícones de talheres - cutlery by Lnhi from the Noun Project.
+            <br>
         </h3>
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
              
