--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <title>comida na FMUP</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+
     <meta property="og:title" content="comida na FMUP" />
     <meta property="og:url" content="https://henriquetguedes.github.io/comidaFMUP/" />
     <meta property="og:image" content="https://henriquetguedes.github.io/comidaFMUP/img/og.jpg" />
-    <meta property="og:description" content="Menus do refeitório HSJ, cantina UP, YellowBar e restCIM - centralizados numa página." />
+    <meta property="og:description"
+        content="Menus do refeitório HSJ, cantina UP, YellowBar e restCIM - centralizados numa página." />
+
     <link rel="stylesheet" href="includes/css/uikit.min.css" />
     <script src="includes/js/jquery-3.4.1.min.js"></script>
     <script src="includes/js/uikit.min.js"></script>
@@ -52,4 +72,5 @@
     </div>
 
 </body>
+
 </html>
