--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="manifest" href="img/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="theme-color" content="#303030">
 
     <meta property="og:title" content="comida na FMUP" />
     <meta property="og:url" content="https://henriquetguedes.github.io/comidaFMUP/" />
