--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="uk-navbar-container uk-margin" uk-navbar>
         <div class="uk-navbar-left">
 
-            <a class="uk-navbar-item uk-logo" href="#"><img src="/img/logo.png" width="75px"></a>
+            <a class="uk-navbar-item uk-logo" href="#"><img src="img/logo.png" width="75px"></a>
 
             <div class="uk-navbar-item">
                 <form action="javascript:void(0)">
